@@ -47,4 +47,6 @@ Version 2024.3.2
 Version 2024.3.3
 - Fixed: enhanced the handling of the TextStyle.LineHeight modifier for better consistency with industry-standard software, as well as adjusted the default value.
 - Fixed: when the UseEnvironmentFonts setting is enabled, the Lato font was not being properly registered. This issue could lead to runtime exceptions in specific minimal environments.
-- Enhanced handling of texts containing the carriage return character '\r' within the custom page format setting. 
+- Enhanced handling of texts containing the carriage return character '\r' within the custom page format setting.
+- Improved the default scaling behavior of Image and SvgImage elements when they are direct descendants of the Constrained element (Width, Height, MinWidth, MinHeight, MaxWidth, MaxHeight).
+
